--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   <body>
      
     <div id="root"></div>
-    <script src="/index.js" async defer type="text/babel"></script>
+    <script src="../src/index.js" async defer type="text/babel"></script>
   </body>
 </html>
