--- a/public/index.html
+++ b/public/index.html
@@ -48,3 +48,10 @@
     <script src="../src/index.js" async defer type="text/babel"></script>
   </body>
 </html>
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Avinya"
+  agent-id="362ff07f-26e2-4f51-a5c6-2d5c69e99451"
+  language-code="en"
+></df-messenger>
